--- a/frontend/package.json
+++ b/frontend/package.json
@@ -18,6 +18,7 @@
     "@mantine/notifications": "^7.12.1",
     "@mantine/nprogress": "^7.12.1",
     "@tabler/icons-react": "^3.14.0",
+    "axios": "^1.7.5",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
     "react-dom": "^18.3.1",
