--- a/frontend/package.json
+++ b/frontend/package.json
@@ -10,10 +10,10 @@
     "preview": "vite preview"
   },
   "dependencies": {
-    "@mantine/core": "^7.12.1",
-    "@mantine/dates": "^7.12.1",
+    "@mantine/core": "^7.12.2",
+    "@mantine/dates": "^7.12.2",
     "@mantine/form": "^7.12.1",
-    "@mantine/hooks": "^7.12.1",
+    "@mantine/hooks": "^7.12.2",
     "@mantine/modals": "^7.12.1",
     "@mantine/notifications": "^7.12.1",
     "@mantine/nprogress": "^7.12.1",
@@ -21,6 +21,7 @@
     "axios": "^1.7.5",
     "dayjs": "^1.11.13",
     "react": "^18.3.1",
+    "react-datepicker": "^7.3.0",
     "react-dom": "^18.3.1",
     "react-router-dom": "^6.26.1",
     "react-toastify": "^10.0.5"
